--- a/index5.html
+++ b/index5.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-
+<meta name="viewport" content="width=320, initial-scale=2.3, user-scalable=no" />
 <title>Lab2</title>
-
+<link rel="stylesheet" href="pc.css" type="text/css" />
+<link rel="stylesheet" href="mob1.css"  media="only screen and (max-device-width: 800px)"  type="text/css" />
+<link rel="stylesheet" href="mob2.css"  media="only screen and (max-device-width: 600px)"  type="text/css" />
+<link rel="stylesheet" href="mob3.css"  media="only screen and (max-device-width: 400px)"  type="text/css" />
 
 </head>
 
