--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,10 @@
 <meta charset="UTF-8">
 
 <title>Lab2</title>
-
+<link rel="stylesheet" href="pc.css" type="text/css" />
+<link rel="stylesheet" href="mob1.css"  media="only screen and (max-device-width: 800px)"  type="text/css" />
+<link rel="stylesheet" href="mob2.css"  media="only screen and (max-device-width: 600px)"  type="text/css" />
+<link rel="stylesheet" href="mob3.css"  media="only screen and (max-device-width: 400px)"  type="text/css" />
 
 </head>
 
